methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:17: error: not found: value break
      break
      ^