methods.slug.SlugHunting.scala.code
var bonChemin = false
var caseVerte = false
var biscuit = false
var fin = false


def hunt() {
 setCouleurBrosse(Color.gray)
 leveBrosse()
 biscuit = estSurBiscuit()
 fin = porteBiscuit()
 while(!fin){
    biscuit = estSurBiscuit()
    if ( biscuit){
      prendBiscuit()
      break
    } 
    bonChemin = isFacingTrail()
    if(bonChemin){
      avance()
      baisseBrosse()
      leveBrosse()
    } else {
      gauche()
    }  
 }

}

// Copy your isFacingTrail() here


def isFacingTrail():Boolean = {
 caseVerte = false
 if (estFaceMur()){
    return caseVerte
 } else {
   avance()
   if (getCouleurSol() == Color.green ){
     caseVerte = true
   } 
   recule()
 }
 return caseVerte
}